--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,11 +122,10 @@ header{
     padding: 50px 0;
 }
 .default .section-title{
-    font-size: 20px;
-    
+    font-size: 30px;
 }
 .default .section-desc{
-    font-size: 12px;
+    font-size: 16px;
     color: #A9A9A9;
     margin-top: 7px;
     margin-bottom: 40px;
@@ -233,7 +232,7 @@ header{
     display: inline-block;
     padding: 0px 20px;
 }
-.section-projects-filters ul li{
+.section-projects--filters ul li{
     display: inline-block;
     padding: 10px;
     text-transform: uppercase;
@@ -243,10 +242,214 @@ header{
     border-bottom: 3px solid #EEEEEE;
     cursor: pointer;
 }
-.section-projects-filters .active,
-.section-projects-filters ul li:hover{
+.section-projects--filters .active,
+.section-projects--filters ul li:hover{
     border-bottom: 3px solid #B28756;
 }
-.section-projects-filters ul li:first-child{
+.section-projects--filters ul li:first-child{
     border-left: 0;
+}
+/*------------ PHOTOS -------------*/
+.section-projects--photos{
+    width: 100vw;
+    max-width: 1140px;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.section-projects--photo{
+    width: 280px;
+}
+.section-projects--photoarea{
+    margin: 10px;
+    width: 260px;
+    height: 160px;
+}
+.section-projects--photoarea img{
+    width: inherit;
+    height: inherit;
+}
+/* Quando passar o mouse pela "photoarea" vai alterar as propriedades de "photoinfo" */
+.section-projects--photoarea:hover .section-projects--photoinfo{
+    display: flex;
+}
+.section-projects--photoinfo{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: inherit;
+    height: inherit;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+}
+.section-projects--photoinfo h5{
+    font-size: 18px;
+    font-weight: 600;
+}
+.section-projects--photoinfo p{
+    padding: 10px;
+    text-align: center;
+}
+/*--------------------- OUR TEAM -----------------------*/
+.bg-team{
+    background-image: url(../img/bg.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 0px;
+}
+.section-team{
+    overflow: hidden;
+    max-width: 880px;
+    margin: auto;
+}
+.section-team-area{
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 50px 0;
+}
+.section-team .sliders{
+    width: 1000vw; /*Cada slide tem 100vw multiplicado por 10 (quantidade de slides) temos 1000vw*/
+    height: 100%;
+}
+.section-team .slide{
+    width: 280px;
+    height: 100%;
+    display: inline-block;
+    background-color: #FFFFFF;
+    margin-right: 20px;
+    min-height: 300px;
+}
+.section-team .slide-area{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: #000000;
+    padding: 30px;
+}
+.section-team-area .sliders-pointers{
+    margin-top: 30px;
+    height: 20px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section-team-area .pointer{
+    height: 15px;
+    width: 15px;
+    border: 2px solid #b28756;
+    border-radius: 8px;
+    margin: 0 5px;
+    cursor: pointer; /*Efeito de Click*/
+}
+.section-team-area .pointer.active{
+    background-color: #b28756;
+}
+.section-team--avatar{
+    width: 150px;
+    height: auto;
+}
+.section-team--name{
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 16px;
+    margin-top: 30px;
+}
+.section-team--role{
+    font-size: 14px;
+    color: #999999;
+    margin-top: 5px;
+}
+.section-team--social{
+    display: flex;
+    margin-top: 20px;
+}
+.section-team--social a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 25px;
+    background-color: #CCCCCC;
+    border-radius: 13px;
+    margin-right: 10px;
+}
+.section-team--social a:hover{
+    background-color: #B28756;
+}
+
+/*--------------------- HAPPY CLIENTS ------------------*/
+.section-happyclients{
+    overflow: hidden;
+    max-width: 880px;
+    margin: auto;
+}
+.section-happyclients--avatar{
+    width: 150px;
+    height: auto;
+    margin-bottom: 15px;
+    margin-top: 20px;
+}
+.section-happyclients--name{
+    font-size: 25px;
+    font-weight: 700;
+}
+.section-happyclients--role{
+    font-size: 16px;
+    font-weight: 700;
+    color: #4F4F4F;
+}
+.section-happyclients--quote{
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+.section-happyclients--testimonial{
+    max-width: 600px;
+    text-align: center;
+    color: #A9A9A9;
+    font-size: 12px;
+    font-weight: 600;
+}
+.section-happyclients .sliders{
+    width: 1000vw; /*Cada slide tem 100vw multiplicado por 10 (quantidade de slides) temos 1000vw*/
+    height: 100%;
+
+    /* Transição entre os slides */
+    /* margin-left: -70vw; */
+}
+.section-happyclients .slide{
+    width: 880px;
+    height: 100%;
+    display: inline-block;
+    margin-right: 20px;
+    min-height: 300px;
+}
+.section-happyclients .slide-area{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    color: #000000;
+}
+.section-happyclients-area .sliders-pointers{
+    margin-top: 30px;
+    height: 20px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section-happyclients-area .pointer{
+    height: 15px;
+    width: 15px;
+    border: 2px solid #b28756;
+    border-radius: 8px;
+    margin: 0 5px;
+    cursor: pointer; /*Efeito de Click*/
+}
+.section-happyclients-area .pointer.active{
+    background-color: #b28756;
 }
