--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -683,4 +683,126 @@ textarea:focus, input:focus, select:focus {
     outline: 0;
     border-bottom: 2px solid #B28756;
 } 
-/*----------------- CONTACTS US --------------*/
+/*----------------- MAP --------------*/
+.section-map{
+    background-image: url(../../media/mapa.jpg);
+    background-size: cover;
+    background-position: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.section-map--area{
+    width: 100vw;
+    max-width: 1140px;
+    margin: auto;
+}
+.section-map--info{
+    width: 50%;
+    padding: 30px;
+    background-color: #FFFFFF;
+    color: #000000;
+}
+.section-map--info-item{
+    display: flex;
+    align-items: center;
+    color: #A9A9A9;
+    margin-bottom: 10px;
+}
+.section-map--info-item-img{
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+    padding: 5px;
+    background-color: #A9A9A9;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+.section-map--info-item-img img {
+    width: 15px;
+    height: auto;
+}
+
+/*---------------- FOOTER -------------*/
+footer {
+    background-color:#000000;
+    padding:20px;
+}
+.footer--area {
+    display:flex;
+    max-width:1140px;
+    margin:auto;
+    color:#FFFFFF;
+}
+.footer--area-item {
+    flex:1;
+}
+.footer-social {
+    display:flex;
+}
+.footer-social a {
+    display:block;
+    width:25px;
+    height:25px;
+    background-color:#333;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius:13px;
+    margin-right:10px;
+}
+.footer-social a:hover {
+    background-color:#B28756;
+}
+.footer-social img {
+    height:10px;
+}
+.footer--area-item.item-2 {
+    color:#999;
+    line-height:20px;
+    font-size:13px;
+    padding:0 10px 10px 10px;
+}
+.footer--area-item.item-3 form {
+    background-color:#333;
+    text-align:center;
+    padding:30px;
+}
+.footer--area-item.item-3 input {
+    width:100%;
+    height:40px;
+    border:0;
+    background:transparent;
+    border-bottom:1px solid #CCC;
+    outline:0;
+    color:#FFF;
+    font-size:14px;
+    text-align:center;
+}
+
+/***********************************/
+/* ********* MEDIA CONTROLS ********/
+/***********************************/
+
+@media(min-width: 450px) and (max-width: 800px){
+    nav{
+        /* display: none; */
+        position: absolute;
+        z-index: 99;
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 70vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul {
+        flex-direction: column;
+    }
+
+    .menu li a {
+        font-weight: bold;
+    }
+
+    
+}
